--- a/docker_submission/ReadMe
+++ b/docker_submission/ReadMe
@@ -18,6 +18,8 @@ For virtualenv:
 	sh start.sh 
 
 4) Please send an email to jmc19@ic.ac.uk, containing the following information:
-	  1	link to docker image (containing SurgT_benchmarking configured to your algorithm);
+	  1	please send us a link of your docker file if you have made any changes (containing SurgT_benchmarking configured to your algorithm);
+	  2     please send us a link of your yml file;
+	  2     please send us a link of your code and graph, and include a run.py file;
 	  2	team members (names + email);
 	  3	info about the datasets that have been used for training.
